--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://zzhan18.github.io",
+  "homepage": "http://zzhan18.github.io/booking",
   "name": "booking",
   "version": "0.1.0",
   "private": true,
