--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "es6-object-assign": "^1.0.2",
     "gh-pages": "^3.1.0",
+    "i18next": "^19.8.3",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.7.3",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
