--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "es6-object-assign": "^1.0.2",
+    "es6-promise": "^4.2.8",
     "gh-pages": "^3.1.0",
     "i18next": "^19.8.3",
     "i18next-browser-languagedetector": "^6.0.1",
