--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "core-js": "^3.7.0",
     "es6-object-assign": "^1.0.2",
     "es6-promise": "^4.2.8",
     "gh-pages": "^3.1.0",
